<resources>
    <string name="app_name">Trader Math Test</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a number.</string>
    <string name="button_send">Send Now</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="math_test">Math Test</string>
    <string name="seq_test">Sequence Test</string>
    <string name="perc_test">Percentage Test</string>
    <string name="logo">Logo</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="about">This app is meant to help practice for the math portion
                            of interviews with finance firms. Pick your difficulty setting
                            and amount of questions for quick, randomized practice sessions; or go
                            for the full test and see how you do. Enjoy!</string>
    <string name="created">Created by:</string>
    <string name="name">Milap Naik</string>
    <string name="inspiration">Inspired by:</string>

    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>

    <string name="banner_ad_unit_id">ca-app-pub-3095210410543033/2188670103
</string>
</resources>

