<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.milapnaik.mentalmathworkout.MainActivity"
    android:background="@color/background">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_weight="1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/mentalmathworkoutlogo"
        android:contentDescription="@string/logo" />

    <Button
        android:text="@string/math_test"
        android:onClick="MathTest"
        android:id="@+id/math_test"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_weight="1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"

        android:background="@color/blackish"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/seq_test"
        android:onClick="SeqTest"
        android:id="@+id/seq_test"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_weight="1"

        android:background="@color/orange"
        android:layout_below="@+id/math_test"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:onClick="Info"
        android:id="@+id/info"
        android:background="@drawable/info"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:onClick="Leaderboard"
        android:id="@+id/leaderboard"
        android:background="@drawable/leaderboard"
        android:layout_alignTop="@+id/info"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="5dp" />


</RelativeLayout>
